objects/zkups__QueuedInternationalCommodity__c.object
<CustomObject>
    <fields>
        <fullName>zkups__CommodityCode__c</fullName>
        <label>Tariff Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CountryOfManufacture__c</fullName>
        <label>Country Of Manufacture</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Description__c</fullName>
        <label>Description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ExportType__c</fullName>
        <label>Export Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__International_Commodity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS International Commodity</label>
        <referenceTo>zkups__UPSInternationalCommodity__c</referenceTo>
        <relationshipLabel>UPS Queued International Commodities</relationshipLabel>
        <relationshipName>UPS_Queued_International_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__JointProduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NumberOfPieces__c</fullName>
        <label>Number Of Packages Per Commodity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__PartNumber__c</fullName>
        <label>Part Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PreferenceCriteria__c</fullName>
        <label>Preference Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__ProducerInfo__c</fullName>
        <label>Producer Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The shipper is the producer of the good</fullName>
                </value>
                <value>
                    <fullName>Knowledge of whether the good qualifies as an originating good</fullName>
                </value>
                <value>
                    <fullName>Reliance on the producers written representation</fullName>
                </value>
                <value>
                    <fullName>A signed Certificate provided to the exporter by the producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__Queued_Shipment__c</fullName>
        <label>UPS Queued Shipment</label>
        <referenceTo>zkups__QueuedShipment__c</referenceTo>
        <relationshipLabel>UPS Queued International Commodities</relationshipLabel>
        <relationshipName>UPS_Queued_International_Commodities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduleBNumber__c</fullName>
        <label>Schedule B Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduleBUnitOfMeasurementCode__c</fullName>
        <label>Schedule B Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barrels</fullName>
                </value>
                <value>
                    <fullName>Carat</fullName>
                </value>
                <value>
                    <fullName>Content Kilogram</fullName>
                </value>
                <value>
                    <fullName>Square Centimeters</fullName>
                </value>
                <value>
                    <fullName>Content Ton</fullName>
                </value>
                <value>
                    <fullName>Curie</fullName>
                </value>
                <value>
                    <fullName>Clean Yield Kilogram</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Dozen Pieces</fullName>
                </value>
                <value>
                    <fullName>Dozen Pairs</fullName>
                </value>
                <value>
                    <fullName>Fiber Meter</fullName>
                </value>
                <value>
                    <fullName>Gross Containers</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Hundred</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Thousand Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Kilogram Total Sugars</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Square Meters</fullName>
                </value>
                <value>
                    <fullName>Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Millicurie</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liter</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Pairs</fullName>
                </value>
                <value>
                    <fullName>Running Bales</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__UnitOfMeasurementOther__c</fullName>
        <label>Other Unit Of Measurement</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UnitOfMeasurement__c</fullName>
        <label>Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bunch</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Bolt</fullName>
                </value>
                <value>
                    <fullName>Butt</fullName>
                </value>
                <value>
                    <fullName>Canister</fullName>
                </value>
                <value>
                    <fullName>Centimeter</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Crate</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Kilograms</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Packet</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__UnitValue__c</fullName>
        <label>Price Per Unit</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__VehicleId__c</fullName>
        <label>Vehicle ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KGS</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>UPS Queued International Commodity</label>
    <nameField>
        <label>Queued International Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Queued International Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>